--- a/index.html
+++ b/index.html
@@ -17,6 +17,65 @@
 </head>
 
 <body>
+    <header>
+        <nav class="navbar navbar-dark navbar-expand-sm fixed-top">
+            <div class="container">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <a class="navbar-brand mr-auto" href="#"><img src="">
+                </a>
+                <div class="collapse navbar-collapse" id="Navbar">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="index.html">
+                                <span class="fa fa-home"></span> Home
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">
+                                <span class="fa fa-info"></span> About
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">
+                                Programs
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">
+                                Executive Committee
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">
+                                Operation
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">
+                                Financing Partner
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/component/guest.html">
+                                News
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/component/user.html">
+                                <span class="fa fa-address-card"></span> Contact
+                            </a>
+                        </li>
+                    </ul>
+                    <span class="navbar-text">
+                        <a id="loginButton">
+                            <span class="fa fa-sign-in"></span> Login</a>
+                    </span>
+                </div>
+            </div>
+        </nav>
+    </header>
     <footer class="footer">
         <div class="container">
             <div class="row">
