--- a/index.html
+++ b/index.html
@@ -88,6 +88,42 @@
                 </div>
             </div>
     </header>
+    <div class="container">
+        <div class="row row-content align-items-center">
+            <div class="col col-sm order-sm-first col-md">
+                <div class="media">
+                    <div class="media-body">
+                        <h2>About Us</h2>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium repudiandae ipsa
+                            temporibus amet deserunt magni tenetur voluptatum labore corrupti natus vel similique
+                            perspiciatis quod nobis cumque vitae blanditiis, nam atque alias quisquam eos tempora illo?
+                            Perspiciatis quisquam porro inventore illo sint nulla voluptatum architecto nemo, magni
+                            similique deleniti sunt nisi?
+                        </p>
+                    </div>
+                    <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/dmitry-vechorko.jpg" alt="about">
+                </div>
+            </div>
+        </div>
+        <div class="row row-content align-items-center">
+            <div class="col col-sm order-sm-first col-md">
+                <div class="media">
+                    <div class="media-body">
+                        <h2 class="mt-0">Our Mission</h2>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident, blanditiis atque!
+                            Repellat sint officia omnis aut itaque eum perferendis dolorem vitae sed voluptatem sunt
+                            sapiente nobis nulla quidem, qui sequi quibusdam veritatis alias voluptatibus atque voluptas
+                            quos? Maiores optio aperiam, sit, doloribus delectus consectetur aut natus illum nostrum hic
+                            voluptate.
+                        </p>
+                    </div>
+                    <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/scott-graham.jpg" alt="mission">
+                </div>
+            </div>
+        </div>
+    </div>
     <footer class="footer">
         <div class="container">
             <div class="row">
