--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                             similique deleniti sunt nisi?
                         </p>
                     </div>
-                    <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/dmitry-vechorko.jpg" alt="about">
+                    <img class="d-flex mr-3 img-thumbnail align-self-center" src="image/dmitry-vechorko.jpg" alt="about">
                 </div>
             </div>
         </div>
@@ -119,7 +119,7 @@
                             voluptate.
                         </p>
                     </div>
-                    <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/scott-graham.jpg" alt="mission">
+                    <img class="d-flex mr-3 img-thumbnail align-self-center" src="image/scott-graham.jpg" alt="mission">
                 </div>
             </div>
         </div>
