--- a/index.html
+++ b/index.html
@@ -76,6 +76,42 @@
             </div>
         </nav>
     </header>
+     <div id="loginModal" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-lg" role="content">
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header align-items-center">
+                    <h4 class="modal-title">Log In</h4>
+                    <button type="button" class="close button" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <form id="form">
+                        &nbsp;&nbsp;&nbsp;Login as:
+                        <div class="form-row ml-2 mr-2">
+                            <div class="form-group col-sm-12">
+                                <select class='form-control' id="visitor">
+                                    <option value="user">User</option>
+                                    <option value="guest">Guest</option>
+                                </select>
+                            </div>
+                            <div class="form-group col-sm-12">
+                                <input type="email" class="form-control" id="email"
+                                    placeholder="Enter Email">
+                            </div>
+                            <div class="form-group col-sm-12">
+                                <input type="password" class="form-control" id="password"
+                                    placeholder="Password">
+                            </div>
+                        </div>
+                        <div class="form-row ml-2 mr-2">
+                            <button type="button" class="btn btn-secondary ml-auto" data-dismiss="modal">Cancel</button>
+                            <a href='#' class="btn btn-primary ml-2 mr-2" id="submit">Sign in</a>
+                        </form>
+                        </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <header class="jumbotron">
         <div class="container">
             <div class="row row-header">
