adding guest table

--- a/guest.html
+++ b/guest.html
@@ -93,6 +93,108 @@
                 </div>
             </div>
     </header>
+    <div class="container">
+        <div class="row row-content align-items-center">
+            <div class="col col-sm order-sm-first col-md">
+                <div class="media">
+                    <div class="media-body">
+                        <p>
+                            Total Smart Dustbins Running: 6 <br>
+                            Total Medical Waste Generation (cyrrent week): 120 KG <br>
+                            Medical Waste Generation to Treatement Ratio: 0.97
+                        </p>
+                        <table border="1">
+                            <caption>
+                                <h2>Smart Dustbins</h2>
+                            </caption>
+                            <thead>
+                                <tr>
+                                    <th></th>
+                                    <th>Current State</th>
+                                    <th>Current Distance form Sensor to Waste</th>
+                                    <th>Technical Difficulty Status</th>
+                                    <th>Need Cleaning</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>Smart Dustbin 1</td>
+                                    <td>Almost Field</td>
+                                    <td>9 CM</td>
+                                    <td>NO</td>
+                                    <td>
+                                        <label class="switch">
+                                            <input type="checkbox" checked>
+                                            <span class="slider round"></span>
+                                        </label>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>Smart Dustbin 2</td>
+                                    <td>Not Field</td>
+                                    <td>23 CM</td>
+                                    <td>NO</td>
+                                    <td><label class="switch">
+                                            <input type="checkbox" checked>
+                                            <span class="slider round"></span>
+                                        </label></td>
+                                </tr>
+                                <tr>
+                                    <td>Smart Dustbin 3</td>
+                                    <td>Not Field</td>
+                                    <td>16 CM</td>
+                                    <td>YES</td>
+                                    <td><label class="switch">
+                                            <input type="checkbox">
+                                            <span class="slider round"></span>
+                                        </label>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>Smart Dustbin 4</td>
+                                    <td>Almost Field</td>
+                                    <td>6 CM</td>
+                                    <td>NO</td>
+                                    <td><label class="switch">
+                                            <input type="checkbox" checked>
+                                            <span class="slider round"></span>
+                                        </label></td>
+                                </tr>
+                                <tr>
+                                    <td>Smart Dustbin 5</td>
+                                    <td>Not Field</td>
+                                    <td>28 CM</td>
+                                    <td>NO</td>
+                                    <td><label class="switch">
+                                            <input type="checkbox" checked>
+                                            <span class="slider round"></span>
+                                        </label></td>
+                                </tr>
+                                <tr>
+                                    <td>Smart Dustbin 6</td>
+                                    <td>Almost Field</td>
+                                    <td>5 CM</td>
+                                    <td>NO</td>
+                                    <td><label class="switch">
+                                            <input type="checkbox" checked>
+                                            <span class="slider round"></span>
+                                        </label></td>
+                                </tr>
+                            </tbody>
+                        </table>
+                        <p>
+                            Technical Support for Smart Dustbins: [Fix Techbical Team Appoinment] <br>
+                            Medicacl Waste Collection: [Schedule Medical Waste Collection Time Slot] <br>
+                            Order Smart Dustbins: [random number] [ORDER] <br>
+                            Manage Appoinments: [Manage] <br>
+                            Feedback: [Provide] <br>
+                            Emergency: [Call Incharge]
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <footer class="footer">
         <div class="container">
             <div class="row">
