--- a/user.html
+++ b/user.html
@@ -81,3 +81,15 @@
             </div>
         </nav>
     </header>
+    <header class="jumbotron">
+        <div class="container">
+            <div class="row row-header">
+                <div class=" col-sm-12">
+                    <h1 class="align">PRISM Bangladesh Foundation</h1>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat eligendi minus, iste quasi
+                        suscipit amet ipsum sint modi architecto mollitia doloribus vitae, iure consectetur hic.
+                    </p>
+                </div>
+            </div>
+    </header>
