adding user table

--- a/user.html
+++ b/user.html
@@ -93,3 +93,104 @@
                 </div>
             </div>
     </header>
+    <div class="container">
+        <div class="row row-content align-items-center">
+            <div class="col col-sm order-sm-first col-md">
+                <div class="media">
+                    <div class="media-body">
+                        <p>
+                            Total Working Hours (running month): 64 <br>
+                            Total OverTime (running month): 7
+                        </p>
+                        <table border="1">
+                            <caption>
+                                <h2>Work Schedule</h2>
+                            </caption>
+                            <thead>
+                                <tr>
+                                    <th></th>
+                                    <th>SUNDAY</th>
+                                    <th>MONDAY</th>
+                                    <th>TUESDAY</th>
+                                    <th>WEDNESDAY</th>
+                                    <th>THURSDAY</th>
+                                    <th>FRIDAY</th>
+                                    <th>SATURDAY</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>09 AM</td>
+                                    <td>Reporting</td>
+                                    <td>Reporting</td>
+                                    <td>Reporting</td>
+                                    <td>Reporting</td>
+                                    <td>Reporting</td>
+                                    <td>Reporting</td>
+                                    <td>Reporting</td>
+                                </tr>
+                                <tr>
+                                    <td>10 AM</td>
+                                    <td rowspan="3">Waste Collection from BIRDEM GENERAL HOSPITAL</td>
+                                    <td></td>
+                                    <td></td>
+                                    <td rowspan="2">Waste Collection from SQUARE HOSPITAL</td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                </tr>
+                                <tr>
+                                    <td>11 AM</td>
+                                    <td rowspan="3">Transport VAN Health Checkup and Servicing</td>
+                                    <td rowspan="3">Waste Collection from UNITED HOSPITAL</td>
+                                    <td rowspan="3">Waste Transportation to MATUAIL Waste Treatment Plant</td>
+                                    <td rowspan="2">Waste Collection from DHAKA MEDICAL COLLEGE</td>
+                                    <td></td>
+                                </tr>
+                                <tr>
+                                    <td>12 PM</td>
+                                    <td></td>
+                                    <td rowspan="3">Waste Transportation to MATUAIL Waste Treatment Plant</td>
+                                </tr>
+                                <tr>
+                                    <td>01 PM</td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                </tr>
+                                <tr>
+                                    <td>02 PM</td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                </tr>
+                                <tr>
+                                    <td>03 PM</td>
+                                    <td rowspan="3">Waste Transportation to MATUAIL Waste Treatment Plant</td>
+                                    <td></td>
+                                    <td rowspan="3">Waste Transportation to MATUAIL Waste Treatment Plant</td>
+                                    <td rowspan="2">Waste Collection from EVERCERE HOSPITAL</td>
+                                    <td></td>
+                                    <td rowspan="2">Waste Collection from LABAID SPECIALIZED HOSPITAL</td>
+                                    <td></td>
+                                </tr>
+                                <tr>
+                                    <td>04 PM</td>
+                                    <td rowspan="2">Preparing Report on Medical Waste Generation ratio & Treatment Ratio
+                                    </td>
+                                    <td rowspan="2">Waste Collection from SQUARE Hospital</td>
+                                    <td rowspan="2">Waste Collection from KURMITOLA GENERAL HOSPITAL</td>
+                                </tr>
+                                <tr>
+                                    <td>05 PM</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
