--- a/user.html
+++ b/user.html
@@ -194,3 +194,48 @@
         </div>
 
     </div>
+    <footer class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-4 offset-1 col-sm-2">
+                    <h5>Links</h5>
+                    <ul class="list-unstyled">
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#mission">Mission</a></li>
+                    </ul>
+                </div>
+                <div class="col-7 col-sm-5 ">
+                    <address>
+                        <h5>Our Address</h5>
+                        101, Ram Krishno Mission Road, Old Paltan<br>
+                        Dhaka, Bangladesh<br>
+                        <i class="fa fa-phone"></i> +852 1234 5678<br>
+                        <i class="fa fa-envelope"></i><a href="mailto:info@prism.net"> info@prism.edu.bd</a>
+                    </address>
+                </div>
+                <div class="col-12 col-sm-4 align-self-center">
+                    <div class="text-center">
+                        <p><b>GET IN TOUCH WITH US</b></p>
+                        <a class="btn btn-social-icon btn-google" href="http://google.com/+">
+                            <i class="fa fa-google-plus fa-lg"></i>
+                        </a>
+                        <a class="btn btn-social-icon btn-facebook" href="http://www.facebook.com/profile.php?id="><i
+                                class="fa fa-facebook fa-lg"></i></a>
+                        <a class="btn btn-social-icon btn-linkedin" href="http://www.linkedin.com/in/"><i
+                                class="fa fa-linkedin fa-lg"></i></a>
+                        <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><i
+                                class="fa fa-twitter fa-lg"></i></a>
+                        <a class="btn btn-social-icon btn-google" href="http://youtube.com/"><i
+                                class="fa fa-youtube fa-lg"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-auto">
+                    <p id="copyright"></p>
+                </div>
+            </div>
+        </div>
+    </footer>
+</body>
