--- a/user.html
+++ b/user.html
@@ -218,16 +218,16 @@
                     <div class="text-center">
                         <p><b>GET IN TOUCH WITH US</b></p>
                         <a class="btn btn-social-icon btn-google" href="http://google.com/+">
-                            <i class="fa fa-google-plus fa-lg"></i>
+                            <i class="fab fa-google-plus fa-lg"></i>
                         </a>
                         <a class="btn btn-social-icon btn-facebook" href="http://www.facebook.com/profile.php?id="><i
-                                class="fa fa-facebook fa-lg"></i></a>
+                                class="fab fa-facebook fa-lg"></i></a>
                         <a class="btn btn-social-icon btn-linkedin" href="http://www.linkedin.com/in/"><i
-                                class="fa fa-linkedin fa-lg"></i></a>
+                                class="fab fa-linkedin fa-lg"></i></a>
                         <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><i
-                                class="fa fa-twitter fa-lg"></i></a>
+                                class="fab fa-twitter fa-lg"></i></a>
                         <a class="btn btn-social-icon btn-google" href="http://youtube.com/"><i
-                                class="fa fa-youtube fa-lg"></i></a>
+                                class="fab fa-youtube fa-lg"></i></a>
                     </div>
                 </div>
             </div>
