--- a/guest.html
+++ b/guest.html
@@ -74,7 +74,7 @@
                     </span>
 
                     <span class="navbar-text">
-                        <a id="logoutButton" href="/index.html">
+                        <a id="logoutButton" href="index.html">
                             <span class="fa fa-sign-out"></span> Logout</a>
                     </span>
                 </div>
