--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="guest.html">
+                            <a class="nav-link" href="#">
                                 News
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="user.html">
+                            <a class="nav-link" href="#">
                                 <span class="fa fa-address-card"></span> Contact
                             </a>
                         </li>
