--- a/user.html
+++ b/user.html
@@ -74,7 +74,7 @@
                         <i class="fa fa-user-circle">&nbsp;&nbsp;&nbsp;&nbsp;</i>
                     </span>
                     <span class="navbar-text">
-                        <a id="logoutButton" href="/index.html">
+                        <a id="logoutButton" href="index.html">
                             <span class="fa fa-sign-out"></span> Logout</a>
                     </span>
                 </div>
