--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="refresh" content="0; URL='https://raihan-mahmud-talukder.github.io/prism-bd-foundation'" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -12,7 +14,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-social/5.1.1/bootstrap-social.min.css"
         integrity="sha512-f8mUMCRNrJxPBDzPJx3n+Y5TC5xp6SmStstEfgsDXZJTcxBakoB5hvPLhAfJKa9rCvH+n3xpJ2vQByxLk4WP2g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
     <title>PRISM Bangladesh Foundation</title>
 </head>
 
@@ -76,7 +78,7 @@
             </div>
         </nav>
     </header>
-     <div id="loginModal" class="modal fade" role="dialog">
+    <div id="loginModal" class="modal fade" role="dialog">
         <div class="modal-dialog modal-lg" role="content">
             <!-- Modal content-->
             <div class="modal-content">
@@ -95,22 +97,20 @@
                                 </select>
                             </div>
                             <div class="form-group col-sm-12">
-                                <input type="email" class="form-control" id="email"
-                                    placeholder="Enter Email">
+                                <input type="email" class="form-control" id="email" placeholder="Enter Email">
                             </div>
                             <div class="form-group col-sm-12">
-                                <input type="password" class="form-control" id="password"
-                                    placeholder="Password">
+                                <input type="password" class="form-control" id="password" placeholder="Password">
                             </div>
                         </div>
                         <div class="form-row ml-2 mr-2">
                             <button type="button" class="btn btn-secondary ml-auto" data-dismiss="modal">Cancel</button>
                             <a href='#' class="btn btn-primary ml-2 mr-2" id="submit">Sign in</a>
-                        </form>
-                        </div>
+                    </form>
                 </div>
             </div>
         </div>
+    </div>
     </div>
     <header class="jumbotron">
         <div class="container">
@@ -138,7 +138,8 @@
                             similique deleniti sunt nisi?
                         </p>
                     </div>
-                    <img class="d-flex mr-3 img-thumbnail align-self-center" src="image/dmitry-vechorko.jpg" alt="about">
+                    <img class="d-flex mr-3 img-thumbnail align-self-center" src="image/dmitry-vechorko.jpg"
+                        alt="about">
                 </div>
             </div>
         </div>
@@ -216,7 +217,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
-        <script src="index.js"></script>
+    <script src="index.js"></script>
 </body>
 
 </html>
