--- a/user.html
+++ b/user.html
@@ -28,7 +28,7 @@
                 <div class="collapse navbar-collapse" id="Navbar">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item active">
-                            <a class="nav-link" href="/index.html">
+                            <a class="nav-link" href="index.html">
                                 <span class="fa fa-home"></span> Home
                             </a>
                         </li>
