--- a/guest.html
+++ b/guest.html
@@ -13,7 +13,7 @@
         integrity="sha512-f8mUMCRNrJxPBDzPJx3n+Y5TC5xp6SmStstEfgsDXZJTcxBakoB5hvPLhAfJKa9rCvH+n3xpJ2vQByxLk4WP2g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="stylesheet" href="style.css">
-    <title>PRISM Bangladesh Foundation</title>
+    <title>GREEN MWM Foundation</title>
 </head>
 
 <body>
@@ -85,7 +85,7 @@
         <div class="container">
             <div class="row row-header">
                 <div class=" col-sm-12">
-                    <h1 class="align">PRISM Bangladesh Foundation</h1>
+                    <h1 class="align">GREEN MWM Foundation</h1>
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat eligendi minus, iste quasi
                         suscipit amet ipsum sint modi architecto mollitia doloribus vitae, iure consectetur hic.
