about & mission change

--- a/index.html
+++ b/index.html
@@ -130,11 +130,24 @@
                     <div class="media-body">
                         <h2>About Us</h2>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium repudiandae ipsa
-                            temporibus amet deserunt magni tenetur voluptatum labore corrupti natus vel similique
-                            perspiciatis quod nobis cumque vitae blanditiis, nam atque alias quisquam eos tempora illo?
-                            Perspiciatis quisquam porro inventore illo sint nulla voluptatum architecto nemo, magni
-                            similique deleniti sunt nisi?
+                            GREEN MWM Foundation is a non-profit voluntary development organization established in 2022.
+                            GREEN MWM is starting its socio-economic development activities for rural poor community in
+                            different areas of Bangladesh with the help of UN organizations like UNDP, UNICEF, UNDRO,
+                            etc. Simultaneously, GREEN MWM is starting to increase its development activities through
+                            implementing various programs and projects sponsored by many international and national
+                            agencies and organizations.
+                            In the meantime, alongside medical waste management GREEN MWM is planning to implement a
+                            large number of development programs and projects in various major development sectors like
+                            aquaculture, rural water supply and sanitation, socio-economic development, rural enterprise
+                            formation and capital development, relief and rehabilitation, disaster management programs,
+                            income generation and self-employment, environment development and management, etc. The
+                            potential programs and projects in the above sectors are integrated aquaculture, intensive
+                            sanitation and hygiene promotion program, socio-economic development program, low-cost
+                            sanitation and awareness development, rural water supply, agriculture rehabilitation and
+                            minor irrigation, human resource development and skill development training, micro
+                            financing/participatory rural credit and savings program, social forestation, sustainable
+                            environment management program, etc.
+
                         </p>
                     </div>
                     <img class="d-flex mr-3 img-thumbnail align-self-center" src="image/dmitry-vechorko.jpg"
@@ -148,11 +161,25 @@
                     <div class="media-body">
                         <h2 class="mt-0">Our Mission</h2>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident, blanditiis atque!
-                            Repellat sint officia omnis aut itaque eum perferendis dolorem vitae sed voluptatem sunt
-                            sapiente nobis nulla quidem, qui sequi quibusdam veritatis alias voluptatibus atque voluptas
-                            quos? Maiores optio aperiam, sit, doloribus delectus consectetur aut natus illum nostrum hic
-                            voluptate.
+                            The main mission of GREEN MWM is to ensure a proper and efficient medical waste management
+                            system for Bangladesh. We want to answer to the problems that the current medical waste
+                            management system has and provide better performing system to reduce the health risks that
+                            is caused by an improper medical waste management system.
+                            At First, we want to solve one of the alarming problems in the system which is poor
+                            segregation of medical wastage. To solve that we came up with Smart Dustbins with RFID.
+                            These Smart Dustbins will help us to ensure a much better segregation.
+                            Next, we want to combine the whole process of medical waste management system under one
+                            online platform. So that, all the HCEs that are working with us can have a hassle-free
+                            medical waste collection and transportation. HCEs can book their waste collection time slot
+                            when their majority of the Smart Dustbins are almost full. Our staffs can also access the
+                            online platform to see their work schedule so that they can see when they are assigned to do
+                            a specific task.
+                            After that, we want to arrange different programs on different areas to raise the awareness
+                            of a proper medical waste management system. We will be discussing about the consequences of
+                            having an improper system. We will be holding training programs to HCE workers so that they
+                            are able to use the Smart Dustbins in a proper way.
+                            By doing this, we want to ensure a healthy and better future for our upcoming generations.
+
                         </p>
                     </div>
                     <img class="d-flex mr-3 img-thumbnail align-self-center" src="image/scott-graham.jpg" alt="mission">
