login as change

--- a/guest.html
+++ b/guest.html
@@ -69,7 +69,7 @@
                         </li> -->
                     </ul>
                     <span class="navbar-text">
-                        Logged in as Guest&nbsp;
+                        Logged in as HCE&nbsp;
                         <i class="fa fa-user-circle">&nbsp;&nbsp;&nbsp;&nbsp;</i>
                     </span>
 
