--- a/user.html
+++ b/user.html
@@ -70,7 +70,7 @@
                     -->
                     </ul>
                     <span class="navbar-text">
-                        Logged in as User&nbsp;
+                        Logged in as Staff&nbsp;
                         <i class="fa fa-user-circle">&nbsp;&nbsp;&nbsp;&nbsp;</i>
                     </span>
                     <span class="navbar-text">
