--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
                         <div class="form-row ml-2 mr-2">
                             <div class="form-group col-sm-12">
                                 <select class='form-control' id="visitor">
-                                    <option value="user">User</option>
-                                    <option value="guest">Guest</option>
+                                    <option value="user">Staff</option>
+                                    <option value="guest">HCE</option>
                                 </select>
                             </div>
                             <div class="form-group col-sm-12">
