--- a/guest.html
+++ b/guest.html
@@ -87,8 +87,7 @@
                 <div class=" col-sm-12">
                     <h1 class="align">GREEN MWM Foundation</h1>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat eligendi minus, iste quasi
-                        suscipit amet ipsum sint modi architecto mollitia doloribus vitae, iure consectetur hic.
+                        GREEN MWM Foundation is a non-profit voluntary development organization established in 2022.
                     </p>
                 </div>
             </div>
