--- a/guest.html
+++ b/guest.html
@@ -182,12 +182,12 @@
                             </tbody>
                         </table>
                         <p>
-                            Technical Support for Smart Dustbins: <a href="https://google.com" target="_blank"> [Fix Technical Team Appoinment]</a> <br>
-                            Medicacl Waste Collection:  <a href="https://google.com" target="_blank"> [Schedule Medical Waste Collection Time Slot]</a><br>
-                            Order Smart Dustbins: [321]  <a href="https://google.com" target="_blank"> [ORDER]</a><br>
-                            Manage Appoinments:  <a href="https://google.com" target="_blank"> [Manage]</a><br>
-                            Feedback:  <a href="https://google.com" target="_blank"> [Provide]</a><br>
-                            Emergency:  <a href="https://google.com" target="_blank"> [Call Incharge]</a>
+                            Technical Support for Smart Dustbins: <a href="https://google.com" target="_blank"> Fix Technical Team Appoinment </a> <br>
+                            Medicacl Waste Collection:  <a href="https://google.com" target="_blank"> Schedule Medical Waste Collection Time Slot </a><br>
+                            Order Smart Dustbins: <a href="https://google.com" target="_blank"> ORDER </a><br>
+                            Manage Appoinments:  <a href="https://google.com" target="_blank"> Manage </a><br>
+                            Feedback:  <a href="https://google.com" target="_blank"> Provide </a><br>
+                            Emergency:  <a href="https://google.com" target="_blank"> Call Incharge </a>
                         </p>
                     </div>
                 </div>
