--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                         101, Ram Krishno Mission Road, Old Paltan<br>
                         Dhaka, Bangladesh<br>
                         <i class="fa fa-phone"></i> +852 1234 5678<br>
-                        <i class="fa fa-envelope"></i><a href="mailto:info@prism.net"> info@prism.edu.bd</a>
+                        <i class="fa fa-envelope"></i><a href="mailto:info@green-mwm.net"> mailto:info@green-mwm.net</a>
                     </address>
                 </div>
                 <div class="col-12 col-sm-4 align-self-center">
