--- a/user.html
+++ b/user.html
@@ -210,7 +210,7 @@
                         101, Ram Krishno Mission Road, Old Paltan<br>
                         Dhaka, Bangladesh<br>
                         <i class="fa fa-phone"></i> +852 1234 5678<br>
-                        <i class="fa fa-envelope"></i><a href="mailto:info@prism.net"> info@prism.edu.bd</a>
+                        <i class="fa fa-envelope"></i><a href="mailto:info@green-mwm.net"> mailto:info@green-mwm.net</a>
                     </address>
                 </div>
                 <div class="col-12 col-sm-4 align-self-center">
@@ -237,4 +237,14 @@
             </div>
         </div>
     </footer>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
+    <script src="index.js"></script>
 </body>
